--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/blog/">Blog</a>
-    </nav>
+    <header>
+      <h1>Test Page</h1>
+      <nav>
+        <a href="/">Home</a>
+        <a href="/blog/">Blog</a>
+      </nav>
+    </header>
     <h1>{{ page.title }}</h1>
     <section>
       {{ content }}
